tests/neg-custom-args/nowarn/nowarn.check
-- [E000] Syntax Warning: tests/neg-custom-args/nowarn/nowarn.scala:9:10 -----------------------------------------------
9 |def t1a = try 1 // warning (parser)
  |          ^^^^^
  |          A try without catch or finally is equivalent to putting
  |          its body in a block; no exceptions are handled.
  |
  | longer explanation available when compiling with `-explain`
-- [E000] Syntax Warning: tests/neg-custom-args/nowarn/nowarn.scala:23:25 ----------------------------------------------
23 |@nowarn(o.inl) def t2d = try 1   // two warnings (`inl` is not a compile-time constant)
   |                         ^^^^^
   |                         A try without catch or finally is equivalent to putting
   |                         its body in a block; no exceptions are handled.
   |
   | longer explanation available when compiling with `-explain`
-- [E000] Syntax Warning: tests/neg-custom-args/nowarn/nowarn.scala:31:26 ----------------------------------------------
31 |@nowarn("id=1") def t4d = try 1 // error and warning (unused nowarn, wrong id)
   |                          ^^^^^
   |                          A try without catch or finally is equivalent to putting
   |                          its body in a block; no exceptions are handled.
   |
   | longer explanation available when compiling with `-explain`
-- [E000] Syntax Warning: tests/neg-custom-args/nowarn/nowarn.scala:33:28 ----------------------------------------------
33 |@nowarn("verbose") def t5 = try 1 // warning with details
   |                            ^^^^^
   |                            A try without catch or finally is equivalent to putting
   |                            its body in a block; no exceptions are handled.
Matching filters for @nowarn or -Wconf:
  - id=E0
  - name=EmptyCatchOrFinallyBlock
   |
   | longer explanation available when compiling with `-explain`
-- [E129] Potential Issue Warning: tests/neg-custom-args/nowarn/nowarn.scala:13:11 -------------------------------------
13 |def t2 = { 1; 2 } // warning (the invalid nowarn doesn't silence anything)
   |           ^
   |           A pure expression does nothing in statement position; you may be omitting necessary parentheses
   |
   | longer explanation available when compiling with `-explain`
-- Warning: tests/neg-custom-args/nowarn/nowarn.scala:12:8 -------------------------------------------------------------
12 |@nowarn("wat?") // warning (typer, invalid filter)
   |        ^^^^^^
   |        Invalid message filter
   |        unknown filter: wat?
-- [E129] Potential Issue Warning: tests/neg-custom-args/nowarn/nowarn.scala:16:12 -------------------------------------
16 |def t2a = { 1; 2 } // warning (invalid nowarn doesn't silence)
   |            ^
   |            A pure expression does nothing in statement position; you may be omitting necessary parentheses
   |
   | longer explanation available when compiling with `-explain`
-- Warning: tests/neg-custom-args/nowarn/nowarn.scala:15:8 -------------------------------------------------------------
15 |@nowarn(t1a.toString) // warning (typer, argument not a compile-time constant)
   |        ^^^^^^^^^^^^
   |        filter needs to be a compile-time constant string
-- Warning: tests/neg-custom-args/nowarn/nowarn.scala:23:10 ------------------------------------------------------------
23 |@nowarn(o.inl) def t2d = try 1   // two warnings (`inl` is not a compile-time constant)
   |        ^^^^^
   |        filter needs to be a compile-time constant string
-- Deprecation Warning: tests/neg-custom-args/nowarn/nowarn.scala:37:10 ------------------------------------------------
37 |def t6a = f // warning (refchecks, deprecation)
   |          ^
   |          method f is deprecated
-- Deprecation Warning: tests/neg-custom-args/nowarn/nowarn.scala:40:30 ------------------------------------------------
40 |@nowarn("msg=fish") def t6d = f // error (unused nowarn), warning (deprecation)
   |                              ^
   |                              method f is deprecated
-- Deprecation Warning: tests/neg-custom-args/nowarn/nowarn.scala:47:10 ------------------------------------------------
47 |def t7c = f // warning (deprecation)
   |          ^
   |          method f is deprecated
-- Unchecked Warning: tests/neg-custom-args/nowarn/nowarn.scala:53:7 ---------------------------------------------------
53 |  case _: List[Int] => 0 // warning (patmat, unchecked)
   |       ^
   |       the type test for List[Int] cannot be checked at runtime
-- Error: tests/neg-custom-args/nowarn/nowarn.scala:31:1 ---------------------------------------------------------------
31 |@nowarn("id=1") def t4d = try 1 // error and warning (unused nowarn, wrong id)
   |^^^^^^^^^^^^^^^
   |@nowarn annotation does not suppress any warnings
-- Error: tests/neg-custom-args/nowarn/nowarn.scala:40:1 ---------------------------------------------------------------
40 |@nowarn("msg=fish") def t6d = f // error (unused nowarn), warning (deprecation)
   |^^^^^^^^^^^^^^^^^^^
   |@nowarn annotation does not suppress any warnings
-- Error: tests/neg-custom-args/nowarn/nowarn.scala:48:5 ---------------------------------------------------------------
48 |  : @nowarn("msg=fish") // error (unused nowarn)
   |    ^^^^^^^^^^^^^^^^^^^
   |    @nowarn annotation does not suppress any warnings
-- Error: tests/neg-custom-args/nowarn/nowarn.scala:60:0 ---------------------------------------------------------------
60 |@nowarn def t9a = { 1: @nowarn; 2 } // error (outer @nowarn is unused)
   |^^^^^^^
   |@nowarn annotation does not suppress any warnings
-- Error: tests/neg-custom-args/nowarn/nowarn.scala:61:27 --------------------------------------------------------------
61 |@nowarn def t9b = { 1: Int @nowarn; 2 } // error (inner @nowarn is unused, it covers the type, not the expression)
   |                           ^^^^^^^
   |                           @nowarn annotation does not suppress any warnings
-- Error: tests/neg-custom-args/nowarn/nowarn.scala:66:0 ---------------------------------------------------------------
66 |@nowarn @ann(f) def t10b = 0  // error (unused nowarn)
   |^^^^^^^
   |@nowarn annotation does not suppress any warnings
-- Error: tests/neg-custom-args/nowarn/nowarn.scala:67:8 ---------------------------------------------------------------
67 |@ann(f: @nowarn) def t10c = 0 // error (unused nowarn), should be silent
   |        ^^^^^^^
   |        @nowarn annotation does not suppress any warnings
-- Error: tests/neg-custom-args/nowarn/nowarn.scala:70:0 ---------------------------------------------------------------
70 |@nowarn class I1a { // error (unused nowarn)
   |^^^^^^^
   |@nowarn annotation does not suppress any warnings
-- Error: tests/neg-custom-args/nowarn/nowarn.scala:75:0 ---------------------------------------------------------------
75 |@nowarn class I1b { // error (unused nowarn)
   |^^^^^^^
   |@nowarn annotation does not suppress any warnings
